# gregtech-flow

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  codecov.yml  config_factory_graph.yaml  factory_graph.py  flow_config.yaml  naming.txt  naming.yaml  pyproject.toml  requirements.txt  test.py  tox.ini  tset.py
.github/workflows/: publish.yml  python-app.yml
assets/: schema.json
gtnh_velo/: __main__.py  cli.py
gtnh_velo/data/: loadMachines.py
gtnh_velo/graph/: __init__.py  _core.py  _machineLocking.py  _postProcessing.py  _preProcessing.py  _utils.py  test.py
gtnh_velo/gtnh/: overclocks.py
gtnh_velo/prototypes/: linearSolver.py
gtnh_velo/resources/: config_template.yaml
projects/: formatting.md  sisg.yaml
projects/dev/: broken_sisg.yaml  chemplant_test.yaml  turbines.yaml
projects/lines/: proc_platinum.yaml
projects/minerals/: rutile-titanium.yaml  scheelite-tungsten.yaml  sisg.yaml
projects/misc/: itnt.yaml
projects/plastics/: epoxid.yaml  ptfe.yaml
projects/power/: tgsless_benzene.yaml
projects/power/naqfuel/: mk1.yaml  mk3.yaml
projects/tests/: README.md  chemical_plant.yaml  utupu.yaml  xl_turbine.yaml  zhuhai.yaml
projects/velo/: formatting.md  legend.md
projects/velo/minerals/: rutile-titanium.yaml  scheelite-tungsten.yaml
projects/velo/misc/: itnt.yaml
projects/velo/plastics/: epoxid.yaml  ptfe.yaml
projects/velo/power/: tgsless_benzene.yaml
prototypes/: linearSolver.py
scripts/: case_insensitivify.py  gen_all.py  run_tests.sh  script_config.yaml
src/data/: basicTypes.py  loadMachines.py
src/graph/: __init__.py  _core.py  _machineLocking.py  _output.py  _postProcessing.py  _preProcessing.py  _utils.py
src/gregtech/: __init__.py  __main__.py
src/gregtech/flow/: __init__.py  __main__.py  cli.py  exceptions.py  schema.py  schemas.py  wrapper.py
src/gregtech/flow/config/: config_schema.py  enums.py
src/gregtech/flow/data/: basicTypes.py  basic_types.py  loadMachines.py  load_project.py
src/gregtech/flow/graph/: __init__.py  _back_edges.py  _output.py  _portNodes.py  _port_nodes.py  _postProcessing.py  _post_processing.py  _preProcessing.py  _pre_processing.py  _solver.py  _utils.py
src/gregtech/flow/gtnh/: __init__.py  overclocks.py
src/gregtech/flow/module/: flow.py
src/gregtech/flow/recipe/: __init__.py  basic_types.py  load_project.py
src/gregtech/flow/resources/: config_schema.json  config_template.yaml  data.yaml  header_schema.json  project_schema.json
src/gtnh/: overclocks.py
src/gtnh_velo/: __init__.py  cli.py
src/gtnh_velo/data/: basicTypes.py  loadMachines.py
src/gtnh_velo/graph/: __init__.py  _backEdges.py  _core.py  _machineLocking.py  _portNodes.py  _postProcessing.py  _preProcessing.py  _utils.py  test.py
src/gtnh_velo/gtnh/: overclocks.py
src/gtnh_velo/prototypes/: linearSolver.py
src/gtnh_velo/resources/: config_template.yaml
src/gtnhvelo/: __init__.py  __main__.py  cli.py
src/gtnhvelo/config/: config_schema.py
src/gtnhvelo/data/: basicTypes.py  loadMachines.py
src/gtnhvelo/graph/: __init__.py  _backEdges.py  _core.py  _machineLocking.py  _output.py  _portNodes.py  _postProcessing.py  _preProcessing.py  _solver.py  _utils.py  test.py
src/gtnhvelo/gtnh/: overclocks.py
src/gtnhvelo/module/: flow.py
src/gtnhvelo/prototypes/: linearSolver.py  sympy.py
src/gtnhvelo/resources/: config_template.yaml  data.yaml  power_data.yaml
tests/: sanity_config.yaml  test_balance.py  test_config.yaml  test_config_linux.yaml  test_config_windows.yaml  test_graph.bak  test_graph.py  test_module.py  test_overclocks.bak  test_overclocks.py  test_sanity.py  test_utils.py
tests/failures/naqfuel/: mk4-new.yaml  mk4-old.yaml  mk5-new.yaml  mk5-old.yaml
tests/test_output/: loopGraph
utils/: regen_samples.py
